# OpenGL

./: CMakeLists.txt  README.md  run.sh  test  test.c
include/glad/: glad.h
src/: glad.c
test/: test.cpp
